syntax = "proto3";

package userreport;

import "google/protobuf/timestamp.proto";

option go_package = "proto/userreport";

message UserReport {
  int32 id = 1;
  string reporter = 2;
  string report_to = 3;
  string detail = 4;
}

message CreateUserReportRequest {
  string reporter = 1;
  string report_to = 2;
  string detail = 3;
}

message CreateUserReportResponse {
  UserReport user_report = 1;
}

message FindUserReportByIDRequest {
  int32 id = 1;
}

message FindUserReportByIDResponse {
  UserReport user_report = 1;
}

message FindAllByReporterRequest {
  string reporter = 1;
}

message FindAllByReporterResponse {
  repeated UserReport user_reports = 1;
}

message FindAllByReportToRequest {
  string report_to = 1;
}

message FindAllByReportToResponse {
  repeated UserReport user_reports = 1;
}

message FindAllUserReportsRequest {}

message FindAllUserReportsResponse {
  repeated UserReport user_reports = 1;
}

message PatchUserReportRequest {
  int32 id = 1;
  string detail = 2;
}

message PatchUserReportResponse {
  UserReport user_report = 1;
}

message DeleteUserReportRequest {
  int32 id = 1;
}

message DeleteUserReportResponse {
  string message = 1;
}

service UserReportService {
  rpc CreateUserReport(CreateUserReportRequest) returns (CreateUserReportResponse);
  rpc FindUserReportByID(FindUserReportByIDRequest) returns (FindUserReportByIDResponse);
  rpc FindAllByReporter(FindAllByReporterRequest) returns (FindAllByReporterResponse);
  rpc FindAllByReportTo(FindAllByReportToRequest) returns (FindAllByReportToResponse);
  rpc FindAllUserReports(FindAllUserReportsRequest) returns (FindAllUserReportsResponse);
  rpc PatchUserReport(PatchUserReportRequest) returns (PatchUserReportResponse);
  rpc DeleteUserReport(DeleteUserReportRequest) returns (DeleteUserReportResponse);
}